   * Split of words-without-spaces (via dictionary) in FCE/OCR - thx Dnkhatri
   * Add "File type associations" in Options - Settings
   * Add "Sort by Gap" - thx Andrebavila
   * Add shorcuts for Tools - Sort By - thx Jolana
   * Add "waveform-multi-move" with Ctrl+mouse-move
   * Add ASSA tool "Background box generator" - thx Leon
* IMPROVED:
   * Update Bulgarian translation - thx Калин
   * Update Italian translation - thx NAMP/bovirus
   * Update Brazilian Portuguese translation - thx Igor
   * Update Portuguese translation - thx hugok79
   * Update Polish translation - thx admas
   * Update Chinese translation - thx nkh0472
   * Update Finnish translation - thx Teijo S
   * Update Spanish translations (es-ES/ex-MX/es-AR) - thx paconaranjo
   * Update Korean translation - thx domddol
   * Update file association icons (so nice) in installer - thx Leon
   * Improve VTT parsing of malformed files - thx Leon
   * Handle merge/split better with "box" tag
   * Improve zoom-in for waveform a little - thx vitacon
   * Trying to make nOCR work better with corrupted files - thx k7Up
   * Improve English/Italian OCR rules a little - thx tormento
   * Allow higher font size in list view / text box - thx OmrSi
   * Improve list-view/text-box color dialog - thx Majid
   * Improve spell check regarding Yen symbol (¥) - thx Dnkhatri
   * Add Nvidia hardware accel encodings for sub burn-in - thx Leon
   * Remove position codes when reading PAC - thx Ernest
   * Allow .m4s as sub ext - farside
* FIXED:
   * Fix crash in "Set start and offset the rest" w original - thx hamilaci
   * Fix for generating empty waveform for online videos - thx OmrSi
   * Fix for finding frame rate in some mp4 files - thx OmrSi
   * Fix typo for middle/center in WebVTT default property - thx koitsu
   * Fix issue with TTML 1.0 + favorite + ext change - thx OmrSi
   * Fix WebVTT browser preview - thx Jeremy
   * Fix crash in PAC when saving with negative values - thx sandrickn