@@ -2523,6 +2523,7 @@
             public string AdjustExtendNextLineStartToCurrentEnd { get; set; }
             public string RecalculateDurationOfCurrentSubtitle { get; set; }
             public string RecalculateDurationOfCurrentSubtitleByOptimalReadingSpeed { get; set; }
+            public string RecalculateDurationOfCurrentSubtitleByMinReadingSpeed { get; set; }
             public string MainCreateStartDownEndUp { get; set; }
             public string MergeDialog { get; set; }
             public string MergeDialogWithNext { get; set; }
