@@ -10,6 +10,7 @@
    * Add shorcuts for Tools - Sort By - thx Jolana
    * Add "waveform-multi-move" with Ctrl+mouse-move
    * Add ASSA tool "Background box generator" - thx Leon
+   * Add shortcut for re-calc duration to min - thx m0ck69
 * IMPROVED:
    * Update Bulgarian translation - thx Калин
    * Update Italian translation - thx NAMP/bovirus
